<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/picLayout"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="120dp"
                    android:layout_height="110dp"
                    android:layout_marginStart="100dp"
                    android:layout_marginLeft="100dp"
                    app:srcCompat="@mipmap/ic_icon" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/take_pic"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="100dp"
                        android:layout_marginLeft="100dp"
                        android:background="@android:drawable/ic_menu_camera"
                        android:onClick="onTakePic" />

                    <Button
                        android:id="@+id/comment_pic"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:background="@android:drawable/stat_notify_chat"
                        android:onClick="onCommentPic" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/nomLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/nom"
                    android:layout_width="42dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:width="15sp"
                    android:text="@string/nom" />

                <EditText
                    android:id="@+id/nomText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/nom_text"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/prenomLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/prenom"
                    android:layout_width="45dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:width="15sp"
                    android:text="@string/prenom" />

                <EditText
                    android:id="@+id/prenomText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/prenom_text"
                    android:inputType="text"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/dateLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/date"
                    android:layout_width="118dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:width="15sp"
                    android:text="@string/date_naissance" />

                <TextView
                    android:id="@+id/dateText"
                    android:layout_width="158dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/date_naissance_text" />

                <Button
                    android:id="@+id/datePick"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="39dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:drawable/ic_menu_today"
                    android:onClick="pickDate"
                    app:cornerRadius="8dp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/villeLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/ville"
                    android:layout_width="43dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:width="15sp"
                    android:text="@string/ville_naissance" />

                <EditText
                    android:id="@+id/villeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/ville_naissance_text"
                    android:inputType="text"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/departementLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/departement"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:width="15sp"
                    android:text="@string/departement" />

                <Spinner
                    android:id="@+id/departementSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/departments" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/phoneLayout"
                android:layout_width="match_parent"
                android:layout_height="150dp"

                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </LinearLayout>

            <Button
                android:id="@+id/addPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/purple_200"
                android:onClick="onAddPhoneNumber"
                android:text="@string/add_phone_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nomLayout" />

            <Button
                android:id="@+id/validateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/purple_700"
                android:onClick="onValidate"
                android:text="@string/validate_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nomLayout" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>